--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
+  /* justify-content: center; */
+  align-items: center;
   flex-direction: column;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.App-topbar {
+  height: 80px;
+  width: inherit;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0px;
+  background-color: blue;
+}
+.App-covid19 {
+  position: absolute;
+  border-radius: 0px 10px 10px 0px;
+  left: 0px;
+  top: 0px;
+}
+
+.App-searchbox {
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (max-width: 600px) {
+  .App-covid19 {
+    position: absolute;
+    border-radius: 0px 10px 10px 0px;
+    left: 0px;
+    top: 0px;
+    height: 99px;
+    width: 100vw;
+    opacity: 0.7;
+    position: fixed;
   }
 }
